app/assets/stylesheets/application.sass.scss
// Entry point for your Sass build

@import "./base/frontend";
@import "./base/misc";

@import "govuk_publishing_components/components/mixins/index";
@import "govuk_publishing_components/components/helpers/colours";
@import "govuk_publishing_components/components/helpers/brand-colours";
@import "govuk_publishing_components/components/layout-super-navigation-header";
@import "govuk_publishing_components/components/search";

@import "./components/activity-log";
@import "./components/supported/procurement-stage-colours";
@import "./components/govuk-radios-small";
@import "./components/autocomplete";
@import "./components/page";
@import "./components/task-list";
@import "./components/timeline";
@import "./components/supported/attachments";
@import "./components/supported/email-preview";
@import "./components/supported/email-list";
@import "./components/supported/messages";
@import "./components/supported/new-case-form";
@import "./components/supported/filter-case-form";
@import "./components/supported/case-statistics";
@import "./components/supported/towers-tabs";
@import "./components/pagination";
@import "./components/panels/info";
@import "./components/tinymce";
@import "./components/multi-file-upload";
@import "./components/supported/notifications";
@import "./components/supported/cases";
@import "./components/supported/table-sort-button";
@import "./components/supported/template-manager";
@import "./components/expander";
@import "./components/tag-bar";
@import "./components/supported/template-edit";
@import "./components/supported/case-summary";
@import "./components/supported/case-list";
@import "./components/supported/case-files";
@import "./components/draft-email-attachments";
@import "./components/lists";
@import "./components/card";
@import "./components/chevron-card";
@import "./components/homepage";
@import "./components/sidebar";
@import "./components/filter";
@import "./components/banner";


// Panel overrides
.govuk-tabs__panel.borderless,
.govuk-table__cell.borderless {
   border: 0 !important;
}

.govuk-table__cell.vertical_middle {
   vertical-align: middle;
}

.govuk-table__cell.no-wrap {
  white-space: nowrap;
}

.case-status-badge {
   white-space: nowrap !important;
}

.govuk-width-container {
  &.wide-container {
    max-width: 2000px;
  }

  @media (min-width: 1020px) {
    &.wide-container {
      margin-left: 30px;
      margin-right: 30px;
    }
  }
 }

// Override govuk-frontend tabs styles to make sure tabs fit in same row
@media (min-width: 40.0625em) {
  .govuk-tabs-overflow-fix .govuk-tabs__list-item--selected {
    padding-left: 15px;
    padding-right: 15px;
  }
  .govuk-tabs-overflow-fix .govuk-tabs__list-item {
    padding: 10px 15px;
  }
}

// line from the prototype
.govuk-prototype-kit-common-templates-related-items {
  border-top: 2px solid #1d70b8;
  padding-top: 10px;
}

// govuk rebrand header personalisation for 'Signed in' as
.govuk-header__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-content: space-between;
  flex-wrap: wrap;

  .govuk-header__signed-in-user {
    font-size: 16px;
    line-height: 1;
    flex-shrink: 0;
    padding: 10px 0;
  }

  .govuk-header__logo{
    flex-basis:50%;
    flex-grow: 2;
    flex-shrink: 1;
  }
}

// dfe logo correct size and focus
.govuk-header__link .govuk-header__logotype {
  height: 30px;
}

.govuk-header__link:focus .govuk-header__logotype {
  content: url(department-for-education_black.png);
  height: 30px;
}

